--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,8 +9,8 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
     # -   id: flake8
-  # - repo: https://github.com/ambv/black
-  #   rev: stable
-  #   hooks:
-  #     - id: black
-  #       language_version: python3.10
+-   repo: https://github.com/ambv/black
+    rev: stable
+    hooks:
+      - id: black
+        language_version: python3.10
